<resources>
    <string name="app_name">InnoAttendance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="log_out">Log out</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_management">User management</string>
    <string name="education_management">Education management</string>
    <string name="statistics_management">Statistics management</string>
    <string name="attendance_management">Attendance management</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="student_full_name">Student full name</string>
    <string name="group">Group</string>
    <string name="add_to_group">Add</string>
    <string name="delete_from_group">Delete</string>

    <string name="error_not_found">Not found</string>
    <string name="representative_full_name">Representative full name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="courses">Courses</string>
    <string name="classes">Classes</string>
    <string name="year">Year</string>
    <string name="teacher">Teacher</string>
    <string name="events">Events</string>
    <string name="groups">Groups</string>
    <string name="auditorium">Auditorium</string>
    <string name="date">Date</string>
    <string name="add">Add</string>>

    <string-array name="statuses">
        <item>edm</item>
        <item>student</item>
        <item>representative</item>
    </string-array>
</resources>
